--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -34,6 +34,37 @@ foreach (example_source ${example_sources})
         target_compile_definitions(${example_name_raylib} PUBLIC PNTR_APP_RAYLIB)
     endif()
 
+    # SDL
+    if (PNTR_PEANUTGB_BUILD_BIN_SDL)
+        find_package(SDL2 QUIET)
+        set(example_name_sdl ${example_name}_sdl)
+
+        # SDL
+        set(SDL_SHARED FALSE)
+        set(SDL2_SHARED FALSE)
+        set(SDL_STATIC TRUE)
+        set(SDL_TEST FALSE)
+        set(SDL_TESTS FALSE)
+        set(INTERFACE_SDL2_SHARED false)
+        set(SDL2_DISABLE_UNINSTALL TRUE)
+        set(SDL2_DISABLE_INSTALL TRUE)
+        set(SDL_INSTALL_TESTS FALSE)
+        find_package(SDL2 REQUIRED)
+        set(SDL2_LIBRARIES SDL2-static)
+        #set(SDL2_LIBRARIES SDL2::SDL2 SDL2::SDL2main)
+
+        add_executable(${example_name_sdl}
+            ${example_source_source}
+        )
+        target_link_libraries(${example_name_sdl} PUBLIC
+            ${SDL2_LIBRARIES}
+            pntr
+            pntr_app
+            pntr_peanutgb
+        )
+        target_compile_definitions(${example_name_sdl} PUBLIC PNTR_APP_SDL)
+    endif()
+
     # CLI
     if (PNTR_PEANUTGB_BUILD_BIN_CLI AND NOT EMSCRIPTEN)
         set(example_name_cli ${example_name}_cli)
